--- a/notebook/SSD Project.ipynb
+++ b/notebook/SSD Project.ipynb
@@ -6068,7 +6068,7 @@
     }
    ],
    "source": [
-    "url = '/home/enrico/Documents/universita/magistrale/secondo_anno/opzionali/sistemi_di_supporto_alle_decisioni/ssd_project/data_set/istruzione_italia_66_14.csv'\n",
+    "url = 'https://raw.githubusercontent.com/okHotel/ssd_project/master/data_set/istruzione_italia_66_14.csv'\n",
     "df1 = pd.read_csv(url)\n",
     "print(df1.head())"
    ]
