--- a/notebook/Temperature_SVM.ipynb
+++ b/notebook/Temperature_SVM.ipynb
@@ -3648,6 +3648,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "plt.plot(df1.Prev, color='orange', label='Prev')\n",
+    "plt.plot(df1.LowerBound, color='blue')\n",
+    "plt.plot(df1.UpperBound, color='blue')\n",
+    "plt.scatter(df1.Date, df1.Temp, color='black', s=2)\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
