--- a/notebook/Temperature_SVM.ipynb
+++ b/notebook/Temperature_SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,9 @@
     "df = pd.read_csv(url, names=['Date', 'Temp'], skiprows=2556) #carico solo i dati degli ultimi 3 anni\n",
     "df = df.sort_values(by=['Date']) #ordino i record in base alla data\n",
     "\n",
-    "rmean = df.Temp.rolling(window=20, min_periods=1).mean() #calcolo la media mobile\n",
-    "rstd = df.Temp.rolling(window=20, min_periods=1).std() #calcolo la deviazione standard mobile\n",
+    "w = 20\n",
+    "rmean = df.Temp.rolling(window=w, min_periods=1).mean() #calcolo la media mobile\n",
+    "rstd = df.Temp.rolling(window=w, min_periods=1).std() #calcolo la deviazione standard mobile\n",
     "df['rmean'] = rmean\n",
     "df['rstd'] = rstd\n",
     "\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
        "4  1988-01-05  13.6  14.525000      0.801561   13.723439   15.326561     0"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,23 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 49  88]\n",
-      " [ 10 215]]\n",
+      "[[ 45  74]\n",
+      " [ 14 229]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.36      0.50       137\n",
-      "           1       0.71      0.96      0.81       225\n",
+      "           0       0.76      0.38      0.51       119\n",
+      "           1       0.76      0.94      0.84       243\n",
       "\n",
-      "    accuracy                           0.73       362\n",
-      "   macro avg       0.77      0.66      0.66       362\n",
-      "weighted avg       0.76      0.73      0.70       362\n",
+      "    accuracy                           0.76       362\n",
+      "   macro avg       0.76      0.66      0.67       362\n",
+      "weighted avg       0.76      0.76      0.73       362\n",
       "\n"
      ]
     }
